# Weather-App

./: README.MD  README.md  pyproject.toml
weatherapp/: .env  db.sqlite3
weatherapp/templates/: current_weather.html  error.html  historical_weather.html  weather_form.html
weatherapp/weather/: apps.py  models.py  services.py  urls.py  views.py
weatherapp/weather/migrations/: 0001_initial.py
weatherapp/weatherapp/: settings.py
