[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = ""
authors = ["Rohitbhakat <60672520+Rohitbhakat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
geopy = "^2.4.1"
black = "^24.8.0"
isort = "^5.13.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
